--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+#GatorMotorsports
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Gator Motorsports</title>
+    <meta charset="utf-8">
+  </head>
+
+  <body>
+    
+  </body>
+</html>
